[package]
name = "csyn"
version = "0.2.0"
edition = "2024"
description = "ROS-like Synapse CLI over Zenoh and FlatBuffers"
license = "Apache-2.0"

# Until synapse_fbs 0.3.0 is published, build against a locally staged crate:
#   cargo build --config 'patch.crates-io.synapse_fbs.path="<synapse_fbs>/target/xtask/packages/rust"'
[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
ctrlc = "3.5"
flatbuffers = "=25.12.19"
mcap = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
synapse_fbs = "0.3.0"
zenoh = "1.9"
