[package]
name = "csyn"
version = "0.3.1"
edition = "2024"
description = "ROS-like Synapse CLI over Zenoh and FlatBuffers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CogniPilot/csyn"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
ctrlc = "3.5"
flatbuffers = "=25.12.19"
mcap = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
synapse_fbs = "0.5.0"
zenoh = "1.9"
